; ModuleID = '/home/carl/AnghaBench/libui/common/extr_attrlist.c_uiprivAttrListRemoveCharacters.c'
source_filename = "/home/carl/AnghaBench/libui/common/extr_attrlist.c_uiprivAttrListRemoveCharacters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.attr* }
%struct.attr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiprivAttrListRemoveCharacters(%struct.TYPE_4__* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.attr*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.attr*, %struct.attr** %9, align 8
  store %struct.attr* %10, %struct.attr** %7, align 8
  br label %11

11:                                               ; preds = %14, %3
  %12 = load %struct.attr*, %struct.attr** %7, align 8
  %13 = icmp ne %struct.attr* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = load %struct.attr*, %struct.attr** %7, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call %struct.attr* @attrDeleteRange(%struct.TYPE_4__* %15, %struct.attr* %16, i64 %17, i64 %18)
  store %struct.attr* %19, %struct.attr** %7, align 8
  br label %11

20:                                               ; preds = %11
  ret void
}

declare dso_local %struct.attr* @attrDeleteRange(%struct.TYPE_4__*, %struct.attr*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
